--- a/home-work-main/week-12/week-12-2.html
+++ b/home-work-main/week-12/week-12-2.html
@@ -18,13 +18,12 @@
     <p id="output"></p>
 
     <script>
-        // ฟังก์ชันคำนวณจำนวนคู่
         function sumEven(n) {
             let sum = 0;
             for (let i = 0; i < n; i++) {
-                sum += i * 2;   // เลขคู่ลำดับที่ i
+                sum += i * 2;
             }
-            return sum; // ส่งค่ากลับ
+            return sum;
         }
         function calc() {
             let n = parseInt(document.getElementById("num").value);
